--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,13 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(":auto-value-base-adapter-item")
     compile 'com.github.jacek-marchwicki.rx-java-extensions:rx-android-extensions:1.1.0'
     compile 'com.google.auto.value:auto-value:1.3'
     compile 'com.google.auto:auto-common:0.6'
 
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.appunite:auto-value-base-adapter-item:0.0.1'
+
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
