--- a/auto-value-base-adapter-item/build.gradle
+++ b/auto-value-base-adapter-item/build.gradle
@@ -6,6 +6,49 @@ apply plugin: 'com.jfrog.bintray'
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
+group = 'com.appunite'
+archivesBaseName = 'auto-value-base-adapter-item'
+version = '0.0.1'
+
+ext {
+    appDescription = "BaseAdapterItem meets AutoValue"
+    appWebsiteUrl = "https://github.com/m-zagorski/auto-value-base-adapter-item"
+    appGirUrl = 'https://github.com/m-zagorski/auto-value-base-adapter-item.git'
+}
+
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
+            from components.java
+            groupId 'com.appunite'
+            artifactId 'auto-value-base-adapter-item'
+            version '0.0.1'
+        }
+    }
+}
+
+bintray {
+    user = project.ext.has("bintray.user") ? project.ext.get("bintray.user") : ""
+    key = project.ext.has("bintray.apikey") ? project.ext.get("bintray.apikey") : ""
+    publications = ['MyPublication']
+    pkg {
+        repo = 'maven'
+        name = archivesBaseName
+        desc = appDescription
+        userOrg = 'mateusz'
+        licenses = ['Apache-2.0']
+        websiteUrl = appWebsiteUrl
+        vcsUrl = appGirUrl
+        publish = true
+        publicDownloadNumbers = true
+        version {
+            gpg {
+                sign = true
+            }
+        }
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup:javapoet:1.7.0'
@@ -16,13 +59,12 @@ dependencies {
     compile 'javax.annotation:javax.annotation-api:1.2'
 }
 
+task copyTestResources(type: Copy) {
+    from "${projectDir}/src/test/resources"
+    into "${buildDir}/classes/test"
+}
+processTestResources.dependsOn copyTestResources
 
-group = 'com.appunite'
-archivesBaseName = 'auto-value-base-adapter-item'
-version = '0.0.1'
-
-ext {
-    appDescription = "BaseAdapterItem meets AutoValue"
-    appWebsiteUrl = "https://github.com/m-zagorski/media-gallery"
-    appGirUrl = 'https://github.com/m-zagorski/media-gallery.git'
+test {
+    maxParallelForks 10
 }
