--- a/auto-value-base-adapter-item-ext/build.gradle
+++ b/auto-value-base-adapter-item-ext/build.gradle
@@ -7,11 +7,11 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 group = 'com.appunite'
-archivesBaseName = 'auto-value-base-adapter-item'
-version = '0.0.3'
+archivesBaseName = 'auto-value-base-adapter-item-ext'
+version = '0.0.1'
 
 ext {
-    appDescription = "BaseAdapterItem meets AutoValue"
+    appDescription = "BaseAdapterItem meets AutoValue - extensions"
     appWebsiteUrl = "https://github.com/m-zagorski/auto-value-base-adapter-item"
     appGirUrl = 'https://github.com/m-zagorski/auto-value-base-adapter-item.git'
 }
@@ -21,8 +21,8 @@ publishing {
         MyPublication(MavenPublication) {
             from components.java
             groupId 'com.appunite'
-            artifactId 'auto-value-base-adapter-item-xt'
-            version '0.0.3'
+            artifactId 'auto-value-base-adapter-item-ext'
+            version '0.0.1'
         }
     }
 }
@@ -51,21 +51,5 @@ bintray {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.squareup:javapoet:1.7.0'
-    compile 'com.google.auto.value:auto-value:1.3'
-    compile 'com.google.auto:auto-common:0.6'
-    compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'com.google.auto.service:auto-service:1.0-rc2'
-    compile 'javax.annotation:javax.annotation-api:1.2'
-    compile 'com.appunite:auto-value-base-adapter-item-ext:0.0.1'
 }
 
-task copyTestResources(type: Copy) {
-    from "${projectDir}/src/test/resources"
-    into "${buildDir}/classes/test"
-}
-processTestResources.dependsOn copyTestResources
-
-test {
-    maxParallelForks 10
-}
