--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
@@ -26,12 +27,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.github.jacek-marchwicki.rx-java-extensions:rx-android-extensions:1.1.0'
+    compile 'com.github.jacek-marchwicki.recyclerview-changes-detector:universal-adapter-rx:1.0.1'
     compile 'com.google.auto.value:auto-value:1.3'
     compile 'com.google.auto:auto-common:0.6'
 
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.appunite:auto-value-base-adapter-item:0.0.1'
+
+    provided 'com.appunite:auto-value-base-adapter-item-ext:0.0.2'
+    compile 'com.appunite:auto-value-base-adapter-item:0.0.3'
 
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
