--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.appunite.auto_value_bai"
         minSdkVersion 14
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -28,13 +28,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.github.jacek-marchwicki.recyclerview-changes-detector:universal-adapter-rx:1.0.1'
-    compile 'com.google.auto.value:auto-value:1.3'
-    compile 'com.google.auto:auto-common:0.6'
+    compile 'com.google.auto.value:auto-value:1.4'
+    compile 'com.google.auto:auto-common:0.8'
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
 
-    provided 'com.appunite:auto-value-base-adapter-item-ext:0.0.2'
-    compile 'com.appunite:auto-value-base-adapter-item:0.0.3'
+    compile project(":auto-value-base-adapter-item")
+    compile project(":auto-value-base-adapter-item-ext")
 
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
