--- a/auto-value-base-adapter-item-ext/build.gradle
+++ b/auto-value-base-adapter-item-ext/build.gradle
@@ -8,7 +8,7 @@ targetCompatibility = JavaVersion.VERSION_1_7
 
 group = 'com.appunite'
 archivesBaseName = 'auto-value-base-adapter-item-ext'
-version = '0.0.3'
+version = '0.0.4-beta'
 
 ext {
     appDescription = "BaseAdapterItem meets AutoValue - extensions"
@@ -22,7 +22,7 @@ publishing {
             from components.java
             groupId 'com.appunite'
             artifactId 'auto-value-base-adapter-item-ext'
-            version '0.0.3'
+            version '0.0.4-beta'
         }
     }
 }
