--- a/auto-value-base-adapter-item/build.gradle
+++ b/auto-value-base-adapter-item/build.gradle
@@ -8,7 +8,7 @@ targetCompatibility = JavaVersion.VERSION_1_7
 
 group = 'com.appunite'
 archivesBaseName = 'auto-value-base-adapter-item'
-version = '0.0.3'
+version = '0.0.4-beta'
 
 ext {
     appDescription = "BaseAdapterItem meets AutoValue"
@@ -22,7 +22,7 @@ publishing {
             from components.java
             groupId 'com.appunite'
             artifactId 'auto-value-base-adapter-item'
-            version '0.0.3'
+            version '0.0.4-beta'
         }
     }
 }
@@ -51,13 +51,13 @@ bintray {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.squareup:javapoet:1.7.0'
-    compile 'com.google.auto.value:auto-value:1.3'
-    compile 'com.google.auto:auto-common:0.6'
+    compile 'com.squareup:javapoet:1.8.0'
+    compile 'com.google.auto.value:auto-value:1.4'
+    compile 'com.google.auto:auto-common:0.8'
     compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'com.google.auto.service:auto-service:1.0-rc2'
+    compile 'com.google.auto.service:auto-service:1.0-rc3'
     compile 'javax.annotation:javax.annotation-api:1.2'
-    compile 'com.appunite:auto-value-base-adapter-item-ext:0.0.1'
+    compile 'com.appunite:auto-value-base-adapter-item-ext:0.0.3'
 }
 
 task copyTestResources(type: Copy) {
